--- a/debian.iot/changelog
+++ b/debian.iot/changelog
@@ -1,3 +1,11 @@
+linux-iot (5.15.0-1008.12) jammy; urgency=medium
+
+  * Miscellaneous Ubuntu changes
+    - [Packaging] Fix package reconstruction
+    - [Packaging] remove tracking bug
+
+ -- Kuba Pawlak <kuba.pawlak@canonical.com>  Tue, 11 Jul 2023 12:41:04 +0200
+
 linux-iot (5.15.0-1008.11) jammy; urgency=medium
 
   * Packaging resync (LP: #1786013)
